Enable lens scheduler to run with GUI event loop.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,10 +15,11 @@ if(UNIX)
   if(APPLE)
     set(PLAT "macosx")
     set(LINK_FLAGS "-bundle -undefined dynamic_lookup -all_load")
+    set(LINK_LIBS "stdc++ -framework Foundation -framework Cocoa objc")
   else(APPLE)
     set(PLAT "linux")
     set(LINK_FLAGS "-shared")
-    set(LINK_LIBS stdc++ rt)
+    set(LINK_LIBS "stdc++ rt")
   endif(APPLE)
 else(UNIX)
   if(WIN32)
