--- a/scripts/rockspec.in
+++ b/scripts/rockspec.in
@@ -32,14 +32,18 @@ build = {
     {{string.format("[%-17s] = '%s/%s.lua'", "'"..lib.type..'.'..file.."'", lib.type, file)}},
 {% end %}
 {% end %}
-{% if not def.pure_lua then %}
+{% if not def.pure_lua then
+  sources_count = 0
+  %}
     -- C module
     {{string.format("[%-17s] = ", "'"..lib.type..".core'")}}{
       sources = {
-{% for path in lub.Dir('src'):glob('%.c',0) do %}
+{% for path in lub.Dir('src'):glob('%.c',0) do
+  sources_count = sources_count + 1 %}
         '{{path}}',
 {% end %}
-{% for path in lub.Dir('src/bind'):glob '%.c' do %}
+{% for path in lub.Dir('src/bind'):glob '%.c' do
+  sources_count = sources_count + 1 %}
         '{{path}}',
 {% end %}
       },
@@ -64,14 +68,21 @@ build = {
 {% end %}
 {% if not def.pure_lua and #def.platspec > 0 then %}
   platforms = {
-{% for _, plat in ipairs(def.platspec) do %}
+{% for _, plat in ipairs(def.platspec) do 
+  idx = sources_count
+%}
     {{plat}} = {
       modules = {
         ['{{lib.type}}.core'] = {
 {% if lub.exist('src/'..plat) then %}
           sources = {
-{% for path in lub.Dir('src/'..plat):glob '%.c' do %}
-            '{{path}}',
+{% for path in lub.Dir('src/'..plat):glob '%.c' do 
+idx = idx + 1 %}
+            [{{idx}}] = '{{path}}',
+{% end %}
+{% for path in lub.Dir('src/'..plat):glob '%.m' do
+idx = idx + 1 %}
+            [{{idx}}] = '{{path}}',
 {% end %}
           },
 {% end %}
@@ -85,5 +96,3 @@ build = {
   },
 {% end %}
 }
-
-
